--- a/index.html
+++ b/index.html
@@ -46,11 +46,8 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://github.com/vrabadiya047" class="github"><i class="bi bi-github"></i></a>
+      <a href="http://www.linkedin.com/in/vivekrabadiya" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -280,7 +277,7 @@
             <div class="resume-item">
               <h4>Bachelors Engineering in Information Technology</h4>
               <h5>June 2013 - May 2017</h5>
-              <p><em>Gujarat Technological University, Ahmedabad, IND</em></p>
+              <p><em>Gujarat Technological University, Ahmedabad, India</em></p>
               <p>Majors: Object-Oriented System Design, Software Engineering & Testing, Digital Electronics, Database, Computer Network, Analysis & Design of Algorithms, System Software Design, Data Structure, Internet Fundamentals, and Web Technology.</p>
             </div><!-- Edn Resume Item -->
 
