--- a/patient-profile-details.html
+++ b/patient-profile-details.html
@@ -41,10 +41,8 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://github.com/vrabadiya047" class="github"><i class="bi bi-github"></i></a>
+      <a href="http://www.linkedin.com/in/vivekrabadiya" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
