--- a/traffic-control-details.html
+++ b/traffic-control-details.html
@@ -79,12 +79,13 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-8 offset-lg-2" data-aos="fade-up" data-aos-delay="200">
-            <h3>Assist Emergency Vehicles on Intersection Using Reinforcement Learning</h3>
+            <h3><a href="https://elib.dlr.de/194292/" target="_blank">Assist Emergency Vehicles on Intersection Using Reinforcement Learning</a></h3>
             <p class="fst-italic">
               Emergency vehicles, like fire trucks and ambulances, play a critical role in responding to crises, where every second counts. In a real-world scenario, navigating through intersections poses a significant challenge, as emergency vehicle drivers must maneuver cautiously and alertly, which can delay their response time.
             </p>
             <p>This project explores innovative traffic control solutions that prioritize emergency vehicles through the power of machine learning, specifically reinforcement learning. By leveraging SUMO (Simulation of Urban Mobility) and microscopic traffic simulation, this project aims to create an environment where emergency vehicles can move quickly and safely, with minimal impact on other road users.</p>
-            
+            <img src="assets/img/DLR.jpg" alt="Assist" class="img-fluid mb-4">
+          
 
             <h4>Key Challenges Addressed:</h4>
             <ul>
