--- a/index.html
+++ b/index.html
@@ -84,15 +84,16 @@
       <script>
         // Initialize Typed.js
         var typed = new Typed('#typed-text', {
-          strings: ['Software Developer'], // Text to be typed out
+          strings: ['Software Engineer', 'Data Engineer', 'Machine Learning Engineer'], // New text options
           typeSpeed: 200, // Speed of typing
-          backSpeed: 50, // Speed of backspacing (optional if you need it to delete)
+          backSpeed: 50, // Speed of backspacing
           startDelay: 100, // Delay before typing starts
           showCursor: true, // Show blinking cursor
           cursorChar: '|', // Custom cursor character
-          loop: false // Set to true if you want it to loop
+          loop: true // Set to true for continuous looping
         });
       </script>
+      
 
     </section><!-- /Hero Section -->
 
