--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>2 Jan 1996</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+49 176 4577 3763</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kassel, Germany</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>nationality:</strong> <span>Indian</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Science in Computer Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vivekrabadiya54@gmail.com</span></li>
       
                 </ul>
@@ -192,13 +192,6 @@
               <span class="skill"><span>C++</span> <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>JavaScript</span> <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
