--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>2 Jan 1996</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+49 176 4577 3763</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kassel, Germany</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>nationality:</strong> <span>Indian</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Nationality:</strong> <span>Indian</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
