--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <script>
         // Initialize Typed.js
         var typed = new Typed('#typed-text', {
-          strings: ['Software Engineer', 'Data Engineer', 'Machine Learning Engineer'], // New text options
+          strings: ['FullStack Developer',' Software Engineer', 'Data Engineer'],
           typeSpeed: 200, // Speed of typing
           backSpeed: 50, // Speed of backspacing
           startDelay: 100, // Delay before typing starts
