--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li> 
         <li><a href="#expertise"><i class="bi bi-images navicon"></i> Areas of Expertise</a></li>
         <li><a href="#key-projects"><i class="bi bi-hdd-stack navicon"></i> Key Projects</a></li>
-        
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -130,7 +129,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Science in Computer Science</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vivekrabadiya54@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vivek.r.rabadiya@gmail.com</span></li>
       
                 </ul>
               </div>
@@ -279,7 +278,7 @@
               <h5>March 2023 - Present</h5>
               <p><em>CTI Consulting GmbH, Kassel, Germany</em></p>
               <ul>
-                <li>• Implemented robust validation and error handling, collaborating with stakeholders to ensure data integrity, system reliability, and alignment with business objectives</li>
+                <li>Implemented robust validation and error handling, collaborating with stakeholders to ensure data integrity, system reliability, and alignment with business objectives</li>
                 <li>Automated Python data pipelines to transform SAP XML into structured LeanIX factsheets, enabling real-time GraphQL synchronization for improved integration, debugging, and transparency.</li>
                 <li>Managed CI/CD pipelines using GitLab and GitHub Actions (Git Workflows), streamlining deployments, enhancing version control, and maintaining a clean, efficient codebase.</li>
                 <li>Experienced in Agile development with a strong focus on collaboration, continuous improvement,and adaptability, ensuring efficient and iterative software delivery.</li>
