--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="tools-list">
           <span>• Node.js </span>
           <span>• Vue.Js </span>
-          <span>• Node.js </span>
+          <span>• Next.js </span>
           <span>• Angular.js </span>
           <span>• npm </span>
           <span>• Spring </span>
@@ -402,7 +402,7 @@
       <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
         <div class="icon flex-shrink-0"><i class="bi bi-diagram-3"></i></div>
         <div>
-          <h4 class="title"><a href="landscape-analyzer-details.html" class="stretched-link">Landscape Analyzer</a></h4>
+          <h4 class="title"><a href="landscape-analyzer-details.html" class="stretched-link">Landscape Analyzer (LeanIX)</a></h4>
           <p class="description">Data Transformation from SAP to LeanIX</p>
         </div>
       </div><!-- End Project Item -->
@@ -419,7 +419,7 @@
       <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
         <div class="icon flex-shrink-0"><i class="bi bi-calculator"></i></div>
         <div>
-          <h4 class="title"><a href="viva-calculation-details.html" class="stretched-link">Viva Calculation Service</a></h4>
+          <h4 class="title"><a href="viva-calculation-details.html" class="stretched-link">Viva Calculation Service (LeanIX)</a></h4>
           <p class="description">Data transfer within process and Interface factsheet</p>
         </div>
       </div><!-- End Project Item -->
