--- a/index.html
+++ b/index.html
@@ -221,17 +221,19 @@
         <div class="tools-list">
           <span>• Node.js </span>
           <span>• Vue.Js </span>
-          <span>• Next.js </span>
           <span>• Angular.js </span>
           <span>• npm </span>
           <span>• Spring </span>
           <span>• Pandas  </span>
+          <span>• Tensorflow </span>
           <span>• Numpy </span>
-          <span>• Polars </span>
+          <span>• NLP </span>
           <span>• GraphQL </span>
+          <span>• RestfulAPI </span>
           <span>• Matplotlib </span>
           <span>• Scikit-learn </span>
           <span>• MongoDB </span>
+          <span>• OpenAI </span>
           <span>• Pyinstaller </span>
         </div>
         <br>
@@ -241,12 +243,12 @@
           <span>• Simulators: ROS Gazebo and SUMO  </span>
           <span>• Big Data Technology: Hadoop and Spark</span>
           <span>• Data Piplines </span>
-          <span>• Cloud: Google Cloud and AWS</span>
-          <span>• LeanIX </span>
+          <span>• Cloud: AWS</span>
+          <span>• Jenkins </span>
           <span>• Kubernetes </span>
           <span>• Docker </span>
           <span>• Git: GitLab and GitHub </span>
-          <span>• OS: Windows 10 and 11, Linux, Ubuntu </span>
+          <span>• OS: Windows 10 and 11, Linux </span>
             
         </div>
 
