--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@
                 
                 <li>Automated Python data pipelines to transform SAP XML into structured LeanIX factsheets, enabling real-time GraphQL synchronization for improved integration, debugging, and transparency.</li>
                 <li>Implemented robust validation and error handling, collaborating with stakeholders to ensure data integrity, system reliability, and alignment with business objectives</li>
-                <li>Developed and implemented customized TypeScript solutions using v-network-graph to visualize application and interface factsheets, ensuring responsive UI/UX with cross-browser compatibility.</li>
-                <li>Managed CI/CD pipelines using GitLab and GitHub Actions (Git Workflows), streamlining deployments, enhancing version control, and maintaining a clean, efficient codebase.</li>
-                <li>Experienced in Agile development with a strong focus on collaboration, continuous improvement,and adaptability, ensuring efficient and iterative software delivery.</li>
-                  <li>Proficient in cloud infrastructure and full-cycle software development, leveraging cloud-native technologies for scalable applications while overseeing design, development, testing, deployment,and maintenance to deliver high-quality, production-ready solutions.
-                    </li>
-                <li>Applied front-end expertise, utilizing HTML5, CSS3, and UI/UX best practices to build intuitive interfaces while maintaining strong communication and teamwork in agile environments.</li>
+                <li>Managed CI/CD pipelines using GitLab and GitHub Actions, automated deployments, improved version control, and ensured efficient data workflows.</li>
+                <li>Leveraged frontend expertise with Vue.js, Angular.js, HTML5, CSS3, and UI/UX best practices to develop intuitive user interfaces while maintaining strong communication and teamwork in agile environments.</li>
+                <li>Developed backend solutions using Python, JavaScript/TypeScript, and Node.js, implementing web services like REST API and GraphQL for seamless data exchange.</li>
+                <li>Worked with AWS, Docker, and Kubernetes to develop scalable cloud applications, ensuring performance, security, and reliability.</li>
+                <li>Managed MySQL and PostgreSQL databases, optimizing queries and ensuring data integrity for efficient data management.</li>
+                <li>Applied SQL and big data processing techniques to extract, transform, and load data from various sources, improving data accessibility and analysis.</li>
               </ul>
             </div><!-- End Software Engineer Item -->
           
