--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           
             <!-- Software Engineer Experience -->
             <div class="resume-item">
-              <h4>Software Engineer</h4>
+              <h4>Full-Stack Software Engineer</h4>
               <h5>March 2023 - Present</h5>
               <p><em>CTI Consulting GmbH, Kassel, Germany</em></p>
               <ul>
