--- a/chatbot-assistant-details.html
+++ b/chatbot-assistant-details.html
@@ -101,8 +101,13 @@
               <li><i class="bi bi-check-circle"></i> Conversation Flow Management for coherent and context-aware responses</li>
             </ul>
 
-            <h4>Technology & Tools:</h4>
-            <p>This project was developed using Python, incorporating libraries like TensorFlow and NLTK for NLP processing. The chatbot was integrated with messaging platforms and web services to expand its functionality.</p>
+            <h4>Technologies & Tools:</h4>
+<ul>
+    <li><strong>Backend:</strong> Python</li>
+    <li><strong>NLP Processing:</strong> TensorFlow (for NLP model development), NLTK (for natural language processing)</li>
+    <li><strong>APIs Integration:</strong> Integrated with various messaging platforms and web services</li>
+    <li><strong>Conversation Management:</strong> Custom conversation flow management for context-aware responses</li>
+</ul>
 
             <h4>Impact and Future Enhancements:</h4>
             <p>The Chatbot Assistant has improved customer engagement and support efficiency. Future enhancements aim to incorporate sentiment analysis and multilingual support to further enrich user interactions.</p>
