--- a/digital-assistant-details.html
+++ b/digital-assistant-details.html
@@ -101,8 +101,14 @@
               <li><i class="bi bi-check-circle"></i> Voice Recognition for hands-free assistance</li>
             </ul>
 
-            <h4>Technology & Tools:</h4>
-            <p>Developed using Python and integrated with popular APIs, including Google Assistant and Alexa SDKs, for voice interactions. Machine learning models were built using TensorFlow for NLP capabilities.</p>
+            <h4>Technologies & Tools:</h4>
+<ul>
+    <li><strong>Frontend:</strong> Java (for Android app development)</li>
+    <li><strong>Backend:</strong> Firebase (for data storage and real-time updates)</li>
+    <li><strong>Authentication:</strong> Google Authentication (for secure access control)</li>
+    <li><strong>Data Security:</strong> Encryption techniques for secure patient data storage</li>
+    <li><strong>Search Functionality:</strong> Implemented for quick and efficient search of patient profiles</li>
+</ul>
 
             <h4>Impact and Future Enhancements:</h4>
             <p>This assistant has streamlined task management and improved productivity for users. Future plans include integrating smart home controls and developing a more conversational, context-aware AI for enhanced user engagement.</p>
