--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <script>
         // Initialize Typed.js
         var typed = new Typed('#typed-text', {
-          strings: ['FullStack Developer',' Software Engineer', 'Data Engineer'],
+          strings: ['FullStack Developer',' Software Engineer'],
           typeSpeed: 200, // Speed of typing
           backSpeed: 50, // Speed of backspacing
           startDelay: 100, // Delay before typing starts
@@ -111,7 +111,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I'm Vivek Rabadiya, a software engineer driven by a passion for leveraging machine learning and advanced analytics to solve real-world challenges. With a strong foundation from my Master’s in Computer Science and hands-on experience with organizations like CTI Consulting GmbH and the German Aerospace Centre (DLR), I specialize in building intelligent systems that enhance decision-making and efficiency.</p>
+        <p>I'm Vivek Rabadiya, a FullStack software engineer specializing in both front-end (React, Angular) and back-end (Node.js, Python) development, with expertise in building scalable, high-performance applications. I combine my skills in full-stack engineering with advanced machine learning to deliver intelligent systems that enhance decision-making and efficiency.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -121,7 +121,7 @@
             <img src="assets/img/my-profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Software Developer</h2>
+            <h2>FullStack Developer</h2>
             <p class="fst-italic py-3">
               
             </p>
@@ -226,15 +226,17 @@
         </div>
         <br>
         <br>
-        <p><b>Frameworks</b></p>
+        <p><b>Frameworks & Libraries</b></p>
         <div class="tools-list">
           <span>• Node.js </span>
           <span>• Vue.Js </span>
           <span>• Angular.js </span>
-          <span>• npm </span>
-          <span>• Spring </span>
+          <span>• Django </span>
+          <span>• D3.js </span>
+          <span>• three.js </span>
+          <span>• WebGL.js </span>
+          <span>• Babylon.js </span>
           <span>• Pandas  </span>
-          <span>• Tensorflow </span>
           <span>• Numpy </span>
           <span>• NLP </span>
           <span>• GraphQL </span>
@@ -256,6 +258,7 @@
           <span>• Jenkins </span>
           <span>• Kubernetes </span>
           <span>• Docker </span>
+          <span>• JIRA: Scrum and Kanaban </span>
           <span>• Git: GitLab and GitHub </span>
           <span>• OS: Windows 10 and 11, Linux </span>
             
