--- a/integration-graph-details.html
+++ b/integration-graph-details.html
@@ -86,25 +86,26 @@
             <p>The Application Integration Graph provides a visual representation of interconnected systems within LeanIX, aiding in architecture decision-making, dependency management, and operational efficiency. The project focuses on building an intuitive graph that represents the complex data flows and dependencies among applications.</p>
             <img src="assets/img/application-integration-graph.jpg" alt="Application Integration Graph Visualization" class="img-fluid mb-4">
 
-            <h4>Project Highlights:</h4>
+            <h4>Key Responsibilities and Contributions:</h4>
             <ul>
-              <li><i class="bi bi-exclamation-circle"></i> Visualized interdependencies among applications for better architecture management</li>
-              <li><i class="bi bi-exclamation-circle"></i> Simplified complex data relationships for improved decision-making</li>
-              <li><i class="bi bi-exclamation-circle"></i> Enabled proactive identification of potential risks and system bottlenecks</li>
+              <li><i class="bi bi-exclamation-circle"></i> Developed a Vue 3 frontend using TypeScript to visualize interdependencies among applications for better architecture management and simplified data relationships.</li>
+              <li><i class="bi bi-exclamation-circle"></i> Leveraged Django on the backend to build robust APIs, ensuring efficient communication between systems and seamless data flow through GraphQL interfaces.</li>
+              <li><i class="bi bi-exclamation-circle"></i> Integrated data from multiple sources, utilizing ETL pipelines to ensure the accuracy and real-time synchronization of information.</li>
+              <li><i class="bi bi-exclamation-circle"></i> Built interactive visualization tools to facilitate the exploration and analysis of complex data relationships, improving both architecture decision-making and proactive risk management.</li>
+              <li><i class="bi bi-exclamation-circle"></i> Used D3.js for 2D visualization of complex data relationships and Three.js for dynamic 3D representation of system interdependencies and data flows.</li>
+              <li><i class="bi bi-exclamation-circle"></i> Implemented unit, integration, and end-to-end tests to ensure system stability and functionality, particularly focusing on real-time applications and integration with hardware systems.</li>
             </ul>
 
-            <h4>Solution Components:</h4>
-            <p>The solution utilizes LeanIX’s API capabilities to extract and visualize application data. Each connection between applications is represented to provide a holistic view of the IT landscape.</p>
+            
 
+            <h4>Technologies & Tools:</h4>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Integrated data from multiple sources to create a unified graph in LeanIX</li>
-              <li><i class="bi bi-check-circle"></i> Mapped out critical application dependencies to enhance system stability</li>
-              <li><i class="bi bi-check-circle"></i> Built interactive visualization tools to facilitate data exploration and analysis</li>
-            </ul>
-
-            <h4>Technology & Tools:</h4>
-            <p>The project leverages LeanIX APIs along with custom visualization tools to build the graph. Data is processed through ETL pipelines, ensuring accurate and up-to-date information.</p>
-
+<li><strong>Frontend:</strong> Vue 3, TypeScript, HTML5, CSS/SCSS</li>
+<li><strong>Backend:</strong> Django, Python</li>
+<li><strong>API:</strong> GraphQL</li>
+<li><strong>Visualization:</strong> D3.js (2D), Three.js (3D), custom interactive tools</li>
+<li><strong>Data Integration:</strong> LeanIX API, ETL pipelines</li>
+</ul>
             <h4>Impact and Future Enhancements:</h4>
             <p>This graph-based approach to application integration empowers IT departments to make data-driven decisions. Future enhancements could include predictive analytics to forecast system impacts from potential changes in application dependencies.</p>
           </div>
