--- a/landscape-analyzer-details.html
+++ b/landscape-analyzer-details.html
@@ -85,7 +85,6 @@
             </p>
             <p>The Landscape Analyzer project utilizes advanced data transformation techniques to migrate and structure data from SAP ERP systems into LeanIX, a platform for enterprise architecture management. By structuring and visualizing data effectively, it enables decision-makers to gain deeper insights into their IT landscapes.</p>
             
-
             <h4>Key Objectives:</h4>
             <ul>
               <li><i class="bi bi-exclamation-circle"></i> Efficient data transformation from SAP to LeanIX</li>
@@ -93,18 +92,15 @@
               <li><i class="bi bi-exclamation-circle"></i> Enabling cross-functional collaboration through shared data insights</li>
             </ul>
 
-            <h4>Solution Overview:</h4>
-            <p>This solution automates the data transformation process, ensuring data consistency and accuracy across platforms. The project leverages LeanIX's data integration capabilities to create a seamless flow of information.</p>
-
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Designed data transformation workflows between SAP and LeanIX</li>
-              <li><i class="bi bi-check-circle"></i> Built custom data mapping and validation routines to ensure data integrity</li>
-              <li><i class="bi bi-check-circle"></i> Provided interactive dashboards for real-time IT landscape insights</li>
-            </ul>
-
             <h4>Technology & Methodology:</h4>
-            <p>The project utilizes ETL (Extract, Transform, Load) processes and LeanIX APIs to streamline data integration. Data mappings are carefully constructed to maintain consistency, accuracy, and context between SAP and LeanIX platforms.</p>
-
+            <ul>
+            <li><strong>Frontend:</strong> Vue.js, TypeScript, HTML5, CSS3</li>
+            <li><strong>Backend:</strong> Python, Django, REST API, GraphQL</li>
+            <li><strong>Cloud:</strong> AWS (S3, Lambda, Glue), Docker, Kubernetes</li>
+            <li><strong>Data Integration:</strong> LeanIX API, ETL pipelines, SQL</li>
+            <li><strong>DevOps & Automation:</strong> Jenkins, GitLab, Terraform</li>
+            
+          </ul>
             <h4>Impact and Future Potential:</h4>
             <p>By providing a structured approach to data transformation, this project aids in making well-informed strategic decisions. Future expansions could include integration with additional ERP systems to broaden data scope and further enhance enterprise architecture visualization.</p>
           </div>
