--- a/traffic-control-details.html
+++ b/traffic-control-details.html
@@ -103,8 +103,14 @@
               <li><i class="bi bi-check-circle"></i> Improved emergency vehicle travel time by 50-60%</li>
             </ul>
 
-            <h4>Technology & Methodology:</h4>
-            <p>Using SUMO and V2I communication, the project explores several reinforcement learning algorithms to prioritize emergency vehicles at intersections. This innovative approach leverages AI to ensure smoother, faster passage for emergency vehicles.</p>
+            <h4>Technologies & Tools:</h4>
+<ul>
+    <li><strong>Frontend:</strong> Matplotlib, Plotly (for visualizing simulation results and performance metrics)</li>
+    <li><strong>Backend:</strong> Python</li>
+    <li><strong>Machine Learning:</strong> TensorFlow, Keras, OpenAI Gym</li>
+    <li><strong>Simulation:</strong> SUMO (Simulation of Urban Mobility)</li>
+    <li><strong>Cloud:</strong> AWS (for model training and running simulations)</li>
+</ul>
 
             <h4>Impact and Future Potential:</h4>
             <p>This AI-driven solution has the potential to revolutionize urban traffic management by providing critical support for emergency response teams. Future applications could expand to cover more comprehensive smart city solutions, enhancing safety and efficiency across urban environments.</p>
