--- a/viva-calculation-details.html
+++ b/viva-calculation-details.html
@@ -102,8 +102,13 @@
               <li><i class="bi bi-check-circle"></i> Error Handling Mechanism to ensure data integrity and reliability</li>
             </ul>
 
-            <h4>Technology & Tools:</h4>
-            <p>This project utilized Python for backend processing, with additional tools for data integration and interface management. SQL was used for database management, ensuring data security and integrity.</p>
+            <h4>Technologies & Tools:</h4>
+<ul>
+    <li><strong>Backend:</strong> Python</li>
+    <li><strong>Data Integration:</strong> SQL (for database management and data security)</li>
+    <li><strong>Automation:</strong> Custom integration tools and scripts for data processing and transfer</li>
+    <li><strong>Visualization & Reporting:</strong> Tools for creating data visualizations and generating reports (e.g., Matplotlib, Plotly)</li>
+</ul>
 
             <h4>Impact and Future Enhancements:</h4>
             <p>The Viva Calculation Service has successfully streamlined complex workflows and minimized human error. Future enhancements will focus on expanding integration with more data sources and incorporating predictive analytics for forecasting calculations.</p>
