--- a/weather-analysis-details.html
+++ b/weather-analysis-details.html
@@ -101,8 +101,14 @@
               <li><i class="bi bi-check-circle"></i> Evaluation of models using metrics such as Mean Absolute Error (MAE) and Root Mean Square Error (RMSE)</li>
             </ul>
 
-            <h4>Technology & Tools:</h4>
-            <p>This project utilized Python, along with libraries like Pandas for data processing, Scikit-learn and TensorFlow for machine learning model development, and Matplotlib for data visualization.</p>
+            <h4>Technologies & Tools:</h4>
+<ul>
+    <li><strong>Backend:</strong> Python</li>
+    <li><strong>Data Processing:</strong> Pandas (for data manipulation and cleaning)</li>
+    <li><strong>Machine Learning:</strong> Scikit-learn (for building and evaluating models), TensorFlow (for deep learning models)</li>
+    <li><strong>Visualization:</strong> Matplotlib (for data visualization)</li>
+    <li><strong>Model Evaluation:</strong> Mean Absolute Error (MAE), Root Mean Square Error (RMSE) for model performance metrics</li>
+</ul>
 
             <h4>Impact and Future Enhancements:</h4>
             <p>This project has provided accurate weather predictions that are beneficial for a variety of applications. Future work will focus on integrating real-time weather data and enhancing model performance through deep learning techniques.</p>
