--- a/index.html
+++ b/index.html
@@ -415,6 +415,15 @@
         </div>
       </div><!-- End Project Item -->
 
+      <!-- Project 2: ROS Gazebo -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
+        <div class="icon flex-shrink-0"><i class="bi bi-diagram-3"></i></div>
+        <div>
+          <h4 class="title"><a href="robot.html" class="stretched-link">Web-Based GUI for Simulated Robot Control and Monitoring </a></h4>
+          <p class="description">Simulation in ROS Gazebo</p>
+        </div>
+      </div><!-- End Project Item -->
+
       <!-- Project 2: Landscape Analyzer -->
       <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
         <div class="icon flex-shrink-0"><i class="bi bi-diagram-3"></i></div>
