--- a/viva-calculation-details.html
+++ b/viva-calculation-details.html
@@ -104,7 +104,7 @@
 
             <h4>Technologies & Tools:</h4>
 <ul>
-    <li><strong>Backend:</strong> Python</li>
+    <li><strong>Backend:</strong> Python, REST API, GraphQL</li>
     <li><strong>Data Integration:</strong> SQL (for database management and data security)</li>
     <li><strong>Automation:</strong> Custom integration tools and scripts for data processing and transfer</li>
     <li><strong>Visualization & Reporting:</strong> Tools for creating data visualizations and generating reports (e.g., Matplotlib, Plotly)</li>
