--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <script>
         // Initialize Typed.js
         var typed = new Typed('#typed-text', {
-          strings: ['FullStack Developer',' Software Engineer'],
+          strings: ['FullStack Engineer',' Software Engineer'],
           typeSpeed: 200, // Speed of typing
           backSpeed: 50, // Speed of backspacing
           startDelay: 100, // Delay before typing starts
