--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <img src="assets/img/my-profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>FullStack Developer</h2>
+            <h2>FullStack Software Engineer</h2>
             <p class="fst-italic py-3">
               
             </p>
