--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="https://formspree.io/f/xanoydzl" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form id="contactForm" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
