--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form id="contactForm" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formspree.io/f/xanoydzl" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -776,35 +776,31 @@
 
 </html>
 <script>
-  const form = document.querySelector('#contactForm');
-  
-  form.addEventListener('submit', async function(e) {
+  const form = document.querySelector('.php-email-form');
+
+  form.addEventListener('submit', function(e) {
     e.preventDefault();
-  
-    const formData = new FormData(form);
-    const data = Object.fromEntries(formData.entries());
-  
-    try {
-      const response = await fetch('http://localhost:3000/api/contact', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(data)
-      });
-  
+
+    fetch(form.action, {
+      method: 'POST',
+      body: new FormData(form),
+      headers: {
+        'Accept': 'application/json'
+      }
+    }).then(response => {
       if (response.ok) {
         document.querySelector('.sent-message').style.display = 'block';
         document.querySelector('.error-message').style.display = 'none';
         form.reset();
       } else {
-        throw new Error('Failed to send message.');
+        return response.json().then(data => {
+          throw new Error(data.error || "Something went wrong");
+        });
       }
-    } catch (error) {
-      document.querySelector('.error-message').innerText = error.message;
+    }).catch(error => {
+      document.querySelector('.error-message').innerHTML = error.message;
       document.querySelector('.error-message').style.display = 'block';
       document.querySelector('.sent-message').style.display = 'none';
-    }
+    });
   });
-  </script>
-  
+</script>
