--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
       message: document.getElementById('message-field').value
     };
 
-    const response = await fetch('https://yourapp.onrender.com/contact', {  // change this to your real Render backend URL
+    const response = await fetch('https://my-website-n2by.onrender.com/contact', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify(data)
