Email address changed

--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email</h3>
-                  <p>v.r.rabadiya@gmail.com</p>
+                  <p>vivek.r.rabadiya@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
