--- a/index.html
+++ b/index.html
@@ -243,55 +243,60 @@
 
         </div>
         <br>
-        <p><b>Tools</b></p>
+        <p><b>Front-End Technologies</b></p>
         <div class="tools-list">
-          <span>• Visual Studio </span>
-          <span>• Android Studio </span>
-          <span>• Unity </span>
-          <span>• PyCharm </span>
-        </div>
-        <br>
-        <br>
-        <p><b>Frameworks & Libraries</b></p>
-        <div class="tools-list">
-          <span>• Node.js </span>
-          <span>• Vue.Js </span>
           <span>• React </span>
-          <span>• Django </span>
-          <span>• D3.js </span>
-          <span>• three.js </span>
-          <span>• WebGL.js </span>
-          <span>• Babylon.js </span>
-          <span>• Pandas </span>
-          <span>• Numpy </span>
-          <span>• NLP </span><span>• PostgreSQL </span>
-          <span>• GraphQL </span>
-          <span>• RestfulAPI </span>
-          <span>• Matplotlib </span>
-          <span>• Scikit-learn </span>
-          <span>• MongoDB </span>
-          <span>• OpenAI </span>
-          <span>• Pyinstaller </span>
+          <span>• Vue </span>
+          <span>• Angular </span>
+          <span>• HTML </span>
+          <span>• CSS </span>
+          <span>• UI/UX </span>
         </div>
         <br>
         <br>
-        <p><b>Other Technology</b></p>
+        <p><b>Back-End Development</b></p>
         <div class="tools-list">
-          <span>• Simulators: ROS Gazebo and SUMO </span>
-          <span>• Big Data Technology: Hadoop and Spark</span>
-          <span>• Data Piplines </span>
-          <span>• Cloud: AWS</span>
-          <span>• Jenkins </span>
-          <span>• Kubernetes </span>
-          <span>• Docker </span>
-          <span>• JIRA: Scrum and Kanaban </span>
-          <span>• Git: GitLab and GitHub </span>
-          <span>• OS: Windows 10 and 11, Linux </span>
-
+          <span>• Django </span>
+          <span>• Node </span>
+          <span>• REST API </span>
+          <span>• GraphQL </span>
         </div>
-
-
-
+        <br>
+        <br>
+        <p><b>Back-End Development</b></p>
+        <div class="tools-list">
+          <span>• PostgreSQL </span>
+          <span>• MySQL </span>
+          <span>• MongoDB </span>
+        </div>
+        <br>
+        <br>
+        <p><b>Space & Data Science</b></p>
+        <div class="tools-list">
+          <span>• NumPy </span>
+          <span>• SciPy </span>
+          <span>• Astropy </span>
+          <span>• Machine Learning </span>
+          <span>• Reinforcement Learning </span>
+        </div>
+        <br>
+        <br>
+        <p><b>Cloud & DevOps</b></p>
+        <div class="tools-list">
+          <span>• AWS (S3, Lambda, Glue, Redshift) </span>
+          <span>• Docker </span>
+          <span>• Kubernetes </span>
+          <span>• GitLab CI/CD </span>
+        </div>
+        <br>
+        <br>
+        <p><b>Tools & Simulators</b></p>
+        <div class="tools-list">
+          <span>• GitLab </span>
+          <span>• GitHub</span>
+          <span>• ROS Gazebo </span>
+          <span>• SUMO</span>
+        </div>
       </div>
 
     </section><!-- /Skills Section -->
