--- a/index.html
+++ b/index.html
@@ -171,135 +171,83 @@
 
     </section><!-- /About Section -->
 
-    <!-- Skills Section -->
-    <section id="skills" class="skills section light-background">
+   <!-- Skills Section -->
+<section id="skills" class="skills section light-background">
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Skills</h2>
+  </div><!-- End Section Title -->
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Skills</h2>
-      </div><!-- End Section Title -->
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <p><b>Languages</b></p>
-        <div class="row skills-content skills-animation">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    
+    <p><b>Languages & Frameworks</b></p>
+    <div class="tools-list">
+      <span>• JavaScript</span>
+      <span>• TypeScript</span>
+      <span>• Python</span>
+      <span>• SQL</span>
+    </div>
+    <br>
 
-          <div class="col-lg-6">
+    <p><b>Frontend Technologies</b></p>
+    <div class="tools-list">
+      <span>• React.js</span>
+      <span>• HTML5</span>
+      <span>• CSS3</span>
+      <span>• Tailwind CSS</span>
+      <span>• Vite</span>
+      <span>• Webpack</span>
+    </div>
+    <br>
 
+    <p><b>Backend & API Development</b></p>
+    <div class="tools-list">
+      <span>• Node.js</span>
+      <span>• Express.js</span>
+      <span>• NestJS</span>
+      <span>• REST APIs</span>
+    </div>
+    <br>
 
+    <p><b>Databases</b></p>
+    <div class="tools-list">
+      <span>• PostgreSQL</span>
+      <span>• SQL Optimization</span>
+      <span>• Redis / Valkey (basic)</span>
+      <span>• Prisma ORM</span>
+    </div>
+    <br>
 
-            <div class="progress">
-              <span class="skill"><span>JavaScript</span> <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div><!-- End Skills Item -->
+    <p><b>DevOps & Cloud</b></p>
+    <div class="tools-list">
+      <span>• Docker</span>
+      <span>• GitHub Actions</span>
+      <span>• GitLab CI</span>
+      <span>• AWS (S3, Lambda, Redshift, Glue)</span>
+      <span>• Kubernetes</span>
+    </div>
+    <br>
 
-            <div class="progress">
-              <span class="skill"><span>TypeScript</span> <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div><!-- End Skills Item -->
+    <p><b>Testing & Automation</b></p>
+    <div class="tools-list">
+      <span>• Jest</span>
+      <span>• Playwright</span>
+      <span>• CI/CD Pipelines</span>
+    </div>
+    <br>
 
-            <div class="progress">
-              <span class="skill"><span>Python</span> <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div><!-- End Skills Item -->
+    <p><b>Other Tools & Practices</b></p>
+    <div class="tools-list">
+      <span>• Agile / Scrum</span>
+      <span>• Git</span>
+      <span>• Technical Documentation</span>
+      <span>• Industrial IoT (Interest)</span>
+    </div>
 
-          </div>
+  </div>
+</section>
+<!-- /Skills Section -->
 
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill"><span>SQL</span> <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>HTML & CSS</span> <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Java</span> <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div><!-- End Skills Item -->
-
-          </div>
-
-
-        </div>
-        <br>
-        <p><b>Front-End Technologies</b></p>
-        <div class="tools-list">
-          <span>• React </span>
-          <span>• Vue </span>
-          <span>• Angular </span>
-          <span>• HTML </span>
-          <span>• CSS </span>
-          <span>• UI/UX </span>
-        </div>
-        <br>
-        <br>
-        <p><b>Back-End Development</b></p>
-        <div class="tools-list">
-          <span>• Django </span>
-          <span>• Node </span>
-          <span>• REST API </span>
-          <span>• GraphQL </span>
-        </div>
-        <br>
-        <br>
-        <p><b>Back-End Development</b></p>
-        <div class="tools-list">
-          <span>• PostgreSQL </span>
-          <span>• MySQL </span>
-          <span>• MongoDB </span>
-        </div>
-        <br>
-        <br>
-        <p><b>Space & Data Science</b></p>
-        <div class="tools-list">
-          <span>• NumPy </span>
-          <span>• SciPy </span>
-          <span>• Astropy </span>
-          <span>• Machine Learning </span>
-          <span>• Reinforcement Learning </span>
-        </div>
-        <br>
-        <br>
-        <p><b>Cloud & DevOps</b></p>
-        <div class="tools-list">
-          <span>• AWS (S3, Lambda, Glue, Redshift) </span>
-          <span>• Docker </span>
-          <span>• Kubernetes </span>
-          <span>• GitLab CI/CD </span>
-        </div>
-        <br>
-        <br>
-        <p><b>Tools & Simulators</b></p>
-        <div class="tools-list">
-          <span>• GitLab </span>
-          <span>• GitHub</span>
-          <span>• ROS Gazebo </span>
-          <span>• SUMO</span>
-        </div>
-      </div>
-
-    </section><!-- /Skills Section -->
 
     <!-- Resume Section -->
     <section id="resume" class="resume section">
